--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>Discord</title>
     <meta name="description" content="Esercizio di riproduzione Discord: parte 2">
     <meta name="keywords" content="discord, esercizio, riproduzione">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css">
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
@@ -14,76 +15,94 @@
         <!-- .container divs purely serve to space the content from the page borders -->
         <div class="container">
             <!-- This div's purpouse is solely being a flex-box and having a background color. -->
-            <div class="flex-box mustard-bg">
-                <div class="logo">
-                    logo
-                </div>
-                <div class="navbar">
+            <div class="flex-box">
+                <img class="logo col" src="img/logo.svg" alt="Discord Logo">
+                <nav class="navbar col">
                     <ul>
-                        <li>link</li>
-                        <li>link</li>
-                        <li>link</li>
-                        <li>link</li>
-                        <li>link</li>
+                        <li> <a href="#">Scarica</a> </li>
+                        <li> <a href="#">Perché Discord</a> </li>
+                        <li> <a href="#">Nitro</a> </li>
+                        <li> <a href="#">Sicurezza</a> </li>
+                        <li> <a href="#">Assistenza</a> </li>
                     </ul>
-                </div>
-                <div class="login-button">
-                    login
+                </nav>
+                <a href="#" class="btn login-btn btn-white text-black col">Accedi</a>
+            </div>
+        </div>
+
+        <div class="jumbotron-section">
+            <!-- .container divs purely serve to space the content from the page borders -->
+            <div class="container">
+                <div class="jumbotron-content">
+                    <h1>Il tuo posto per parlare</h1>
+                    <p>Che tu faccia parte di un club scolastico, gruppo di gamer, comunità artistica mondiale o semplicemente di un piccolo gruppo di amici che vuole passare il tempo assieme, Discord rende più facile chiacchierare ogni giorno e ritrovarsi più spesso.</p>
+                    <div class="btn-container flex-box">
+                        <a href="#" class="btn btn-white text-black col"><i class="fa-solid fa-down-long"></i>Scarica per Mac</a>
+                        <a href="#" class="btn btn-black text-white col">Apri Discord nel tuo browser</a>
+                    </div>
                 </div>
             </div>
         </div>
+
     </header>
 
     <!-- Main content is divided in multiple sections, each one with a different bg. -->
     <main>
 
-        <div class="jumbotron-section dark-blue-bg">
-            <!-- .container divs purely serve to space the content from the page borders -->
-            <div class="container">
-                <div class="jumbotron-content pink-bg">
-                </div>
-            </div>
-        </div>
-
-        <div class="section-1">
+        <section>
             <!-- .container divs purely serve to space the content from the page borders -->
             <div class="container">
                 <!-- This div's purpouse is solely being a flex-box and having a background color. -->
                 <div class="flex-box">
-                    <div class="blue-bg grow"></div>
-                    <div class="light-pink-bg"></div>
+                    <img src="img/item1.svg" class="item-img"></img>
+                    <div class="item-text">
+                        <h2>Un luogo a invito con tutto lo spazio necessario per parlare</h2>
+                        <p>I server Discord sono organizzati in canali tematici in cui puoi collaborare, condividere o semplicemente parlare della tua giornata senza intasare una chat di gruppo.</p>
+                    </div>
                 </div>
             </div>
-        </div>
+        </section>
 
-        <div class="section-2 grey-bg">
+        <section class="grey-bg">
             <!-- .container divs purely serve to space the content from the page borders -->
             <div class="container">
                 <!-- This div's purpouse is solely being a flex-box and having a background color. -->
                 <div class="flex-box row-reverse">
-                    <div class="blue-bg grow"></div>
-                    <div class="light-pink-bg"></div>
+                    <img src="img/item2.svg" class="item-img"></img>
+                    <div class="item-text">
+                        <h2>Dove trovarsi è facile</h2>
+                        <p>Mettiti comodo in un canale vocale quando hai tempo. Gli amici nel tuo server possono vedere che sei lì e unirsi istantaneamente senza dover chiamare.</p>
+                    </div>
                 </div>
             </div>
-        </div>
+        </section>
 
-        <div class="section-3">
+        <section>
             <!-- .container divs purely serve to space the content from the page borders -->
             <div class="container">
                 <!-- This div's purpouse is solely being a flex-box and having a background color. -->
                 <div class="flex-box">
-                    <div class="blue-bg grow"></div>
-                    <div class="light-pink-bg"></div>
+                    <img src="img/item3.svg" class="item-img"></img>
+                    <div class="item-text">
+                        <h2>Da pochi a un fandom</h2>
+                        <p>Dai inizio a una community di qualsiasi dimensione con strumenti di moderazione e accesso ai membri personalizzabile. Concedi ai membri poteri speciali, crea canali privati e molto altro.</p>
+                    </div>
                 </div>
             </div>
-        </div>
+        </section>
 
-        <div class="section-4 grey-bg">
+        <section class="big-section grey-bg">
             <!-- .container divs purely serve to space the content from the page borders -->
             <div class="container">
-                <div class="green-bg"></div>
+                <div class="wide-text">
+                    <h2>Tecnologia affidabile per tenersi in contatto</h2>
+                    <p>Video e audio a bassa latenza ti faranno sentire come se foste tutti nella stessa stanza. Fai ciao in video, guarda gli amici giocare in streaming, o riunitevi in una sessione di disegno con la condivisione schermo.</p>
+                </div>
+                <img src="img/item4-big.svg" class="big-item-img"></img>
+                <h3 class="stars-bg">Pronto a iniziare la tua avventura?</h3>
+                <a href="#" class="btn btn-lille text-white"><i class="fa-solid fa-down-long"></i>Scarica per Mac</a>
             </div>
-        </div>
+        </section>
 
     </main>
 
