--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
         <div class="container">
             <!-- This div's purpouse is solely being a flex-box and having a background color. -->
             <div class="flex-box">
-                <img class="logo col" src="img/logo.svg" alt="Discord Logo">
-                <nav class="navbar col">
+                <img class="logo" src="img/logo.svg" alt="Discord Logo">
+                <nav class="navbar">
                     <ul>
                         <li> <a href="#">Scarica</a> </li>
                         <li> <a href="#">Perché Discord</a> </li>
@@ -26,14 +26,14 @@
                         <li> <a href="#">Assistenza</a> </li>
                     </ul>
                 </nav>
-                <a href="#" class="btn login-btn btn-white text-black col">Accedi</a>
+                <a href="#" class="btn login-btn btn-white text-black">Accedi</a>
             </div>
         </div>
 
         <div class="jumbotron-section">
             <!-- .container divs purely serve to space the content from the page borders -->
             <div class="container">
-                <div class="jumbotron-content">
+                <div class="jumbotron-content text-white">
                     <h1>Il tuo posto per parlare</h1>
                     <p>Che tu faccia parte di un club scolastico, gruppo di gamer, comunità artistica mondiale o semplicemente di un piccolo gruppo di amici che vuole passare il tempo assieme, Discord rende più facile chiacchierare ogni giorno e ritrovarsi più spesso.</p>
                     <div class="btn-container flex-box">
@@ -110,30 +110,75 @@
     <footer>
 
         <!-- .container divs purely serve to space the content from the page borders -->
-        <div class="footer-1 container">
+        <div class="container">
             <!-- This div's purpouse is solely being a flex-box and having a background color. -->
+            <div class="flex-box site-map">
+                <div class="footer-col">
+                    <h3 class="text-lille">Il tuo posto per parlare</h3>
+                    <div class="flex-box language text-white">
+                        <img class="flag" src="img/ita.png" alt="Italian flag">
+                        <span>Italiano</span>
+                        <i class="fa-solid fa-chevron-down"></i>
+                    </div>
+                    <div class="social-media text-white flex-box">
+                        <a href="#"><i class="fa-brands fa-twitter"></i></a>
+                        <a href="#"><i class="fa-brands fa-instagram"></i></a>
+                        <a href="#"><i class="fa-brands fa-facebook"></i></a>
+                        <a href="#"><i class="fa-brands fa-youtube"></i></a>
+                    </div>
+                </div>
+                <div class="footer-col">
+                    <h5 class="text-lille">Prodotto</h5>
+                    <ul>
+                        <li><a href="#">Scarica</a></li>
+                        <li><a href="#">Perché Discordo</a></li>
+                        <li><a href="#">Nitro</a></li>
+                        <li><a href="#">Sicurezza</a></li>
+                        <li><a href="#">Assistenza</a></li>
+                    </ul>
+                </div>
+                <div class="footer-col">
+                    <h5 class="text-lille">Compagnia</h5>
+                    <ul>
+                        <li><a href="#">Chi siamo</a></li>
+                        <li><a href="#">Lavora con noi</a></li>
+                        <li><a href="#">Marchio</a></li>
+                        <li><a href="#">Redazione</a></li>
+                        <li><a href="#">Negozio</a></li>
+                    </ul>
+                </div>
+                <div class="footer-col">
+                    <h5 class="text-lille">Risorse</h5>
+                    <ul>
+                        <li><a href="#">Scarica</a></li>
+                        <li><a href="#">Perché Discordo</a></li>
+                        <li><a href="#">Nitro</a></li>
+                        <li><a href="#">Sicurezza</a></li>
+                        <li><a href="#">Assistenza</a></li>
+                        <li><a href="#">Scarica</a></li>
+                        <li><a href="#">Perché Discordo</a></li>
+                        <li><a href="#">Nitro</a></li>
+                        <li><a href="#">Sicurezza</a></li>
+                        <li><a href="#">Assistenza</a></li>
+                        <li><a href="#">Assistenza</a></li>
+                    </ul>
+                </div>
+                <div class="footer-col">
+                    <h5 class="text-lille">Norme</h5>
+                    <ul>
+                        <li><a href="#">Scarica</a></li>
+                        <li><a href="#">Perché Discordo</a></li>
+                        <li><a href="#">Nitro</a></li>
+                        <li><a href="#">Sicurezza</a></li>
+                        <li><a href="#">Assistenza</a></li>
+                    </ul>
+                </div>
+            </div>
             <div class="flex-box">
-                <div class="salmon-bg grow"></div>
-                <div class="teal-bg white-border"></div>
-                <div class="teal-bg white-border"></div>
-                <div class="teal-bg white-border"></div>
+                <img class="logo" src="img/logo.svg" alt="Discord Logo">
+                <a href="#" class="btn login-btn btn-lille text-white">Registrati</a>
             </div>
         </div>
-        <hr>
-
-        <!-- .container divs purely serve to space the content from the page borders -->
-        <div class="footer-2 container">
-            <!-- This div's purpouse is solely being a flex-box and having a background color. -->
-            <div class="flex-box light-blue-bg">
-                <div class="logo light-pink-bg">
-                    Logo
-                </div>
-                <div class="login-button light-pink-bg">
-                    Bottone
-                </div>
-            </div>
-        </div>
-        <hr>
 
     </footer>
 
