Added some classes

--- a/index.html
+++ b/index.html
@@ -12,9 +12,7 @@
 </head>
 <body>
     <header>
-        <!-- .container divs purely serve to space the content from the page borders -->
         <div class="container">
-            <!-- This div's purpouse is solely being a flex-box and having a background color. -->
             <div class="flex-box">
                 <img class="logo" src="img/logo.svg" alt="Discord Logo">
                 <nav class="navbar">
@@ -31,12 +29,11 @@
         </div>
 
         <div class="jumbotron-section">
-            <!-- .container divs purely serve to space the content from the page borders -->
             <div class="container">
                 <div class="jumbotron-content text-white">
                     <h1>Il tuo posto per parlare</h1>
                     <p>Che tu faccia parte di un club scolastico, gruppo di gamer, comunità artistica mondiale o semplicemente di un piccolo gruppo di amici che vuole passare il tempo assieme, Discord rende più facile chiacchierare ogni giorno e ritrovarsi più spesso.</p>
-                    <div class="btn-container flex-box">
+                    <div class="btn-container flex-box padding-default">
                         <a href="#" class="btn btn-white text-black col"><i class="fa-solid fa-down-long"></i>Scarica per Mac</a>
                         <a href="#" class="btn btn-black text-white col">Apri Discord nel tuo browser</a>
                     </div>
@@ -46,53 +43,44 @@
 
     </header>
 
-    <!-- Main content is divided in multiple sections, each one with a different bg. -->
     <main>
-
         <section>
-            <!-- .container divs purely serve to space the content from the page borders -->
             <div class="container">
-                <!-- This div's purpouse is solely being a flex-box and having a background color. -->
                 <div class="flex-box">
                     <img src="img/item1.svg" class="item-img"></img>
                     <div class="item-text">
                         <h2>Un luogo a invito con tutto lo spazio necessario per parlare</h2>
-                        <p>I server Discord sono organizzati in canali tematici in cui puoi collaborare, condividere o semplicemente parlare della tua giornata senza intasare una chat di gruppo.</p>
+                        <p class="padding-default">I server Discord sono organizzati in canali tematici in cui puoi collaborare, condividere o semplicemente parlare della tua giornata senza intasare una chat di gruppo.</p>
                     </div>
                 </div>
             </div>
         </section>
 
         <section class="grey-bg">
-            <!-- .container divs purely serve to space the content from the page borders -->
             <div class="container">
-                <!-- This div's purpouse is solely being a flex-box and having a background color. -->
                 <div class="flex-box row-reverse">
                     <img src="img/item2.svg" class="item-img"></img>
                     <div class="item-text">
                         <h2>Dove trovarsi è facile</h2>
-                        <p>Mettiti comodo in un canale vocale quando hai tempo. Gli amici nel tuo server possono vedere che sei lì e unirsi istantaneamente senza dover chiamare.</p>
+                        <p class="padding-default">Mettiti comodo in un canale vocale quando hai tempo. Gli amici nel tuo server possono vedere che sei lì e unirsi istantaneamente senza dover chiamare.</p>
                     </div>
                 </div>
             </div>
         </section>
 
         <section>
-            <!-- .container divs purely serve to space the content from the page borders -->
             <div class="container">
-                <!-- This div's purpouse is solely being a flex-box and having a background color. -->
                 <div class="flex-box">
                     <img src="img/item3.svg" class="item-img"></img>
                     <div class="item-text">
                         <h2>Da pochi a un fandom</h2>
-                        <p>Dai inizio a una community di qualsiasi dimensione con strumenti di moderazione e accesso ai membri personalizzabile. Concedi ai membri poteri speciali, crea canali privati e molto altro.</p>
+                        <p class="padding-default">Dai inizio a una community di qualsiasi dimensione con strumenti di moderazione e accesso ai membri personalizzabile. Concedi ai membri poteri speciali, crea canali privati e molto altro.</p>
                     </div>
                 </div>
             </div>
         </section>
 
         <section class="big-section grey-bg">
-            <!-- .container divs purely serve to space the content from the page borders -->
             <div class="container">
                 <div class="wide-text">
                     <h2>Tecnologia affidabile per tenersi in contatto</h2>
@@ -106,16 +94,12 @@
 
     </main>
 
-    <!-- Footer content is divided in two containers. -->
     <footer>
-
-        <!-- .container divs purely serve to space the content from the page borders -->
-        <div class="container">
-            <!-- This div's purpouse is solely being a flex-box and having a background color. -->
-            <div class="flex-box site-map">
+        <div class="container padding-default">
+            <div class="flex-box site-map padding-default">
                 <div class="footer-col">
                     <h3 class="text-lille">Il tuo posto per parlare</h3>
-                    <div class="flex-box language text-white">
+                    <div class="flex-box language text-white padding-default">
                         <img class="flag" src="img/ita.png" alt="Italian flag">
                         <span>Italiano</span>
                         <i class="fa-solid fa-chevron-down"></i>
